; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/wf/extr_wfc_client_server_api.c_wfc_server_stream_is_in_use.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/wf/extr_wfc_client_server_api.c_wfc_server_stream_is_in_use.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"%s: stream 0x%x\00", align 1
@VCOS_FUNCTION = common dso_local global i32 0, align 4
@WFC_IPC_MSG_SS_IS_IN_USE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [27 x i8] c"%s: status 0x%x, result %u\00", align 1
@VCOS_SUCCESS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wfc_server_stream_is_in_use(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  store i64 0, i64* %4, align 8
  store i64 8, i64* %5, align 8
  %6 = load i32, i32* @VCOS_FUNCTION, align 4
  %7 = load i32, i32* %2, align 4
  %8 = sext i32 %7 to i64
  %9 = call i32 (i8*, i32, i64, ...) @vcos_log_trace(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %6, i64 %8)
  %10 = load i32, i32* @WFC_IPC_MSG_SS_IS_IN_USE, align 4
  %11 = load i32, i32* %2, align 4
  %12 = call i64 @wfc_client_server_api_sendwait_stream(i32 %10, i32 %11, i64* %4, i64* %5)
  store i64 %12, i64* %3, align 8
  %13 = load i32, i32* @VCOS_FUNCTION, align 4
  %14 = load i64, i64* %3, align 8
  %15 = load i64, i64* %4, align 8
  %16 = call i32 (i8*, i32, i64, ...) @vcos_log_trace(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0), i32 %13, i64 %14, i64 %15)
  %17 = load i64, i64* %3, align 8
  %18 = load i64, i64* @VCOS_SUCCESS, align 8
  %19 = icmp ne i64 %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %1
  store i64 0, i64* %4, align 8
  br label %21

21:                                               ; preds = %20, %1
  %22 = load i64, i64* %4, align 8
  %23 = icmp ne i64 %22, 0
  %24 = zext i1 %23 to i32
  ret i32 %24
}

declare dso_local i32 @vcos_log_trace(i8*, i32, i64, ...) #1

declare dso_local i64 @wfc_client_server_api_sendwait_stream(i32, i32, i64*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
